--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
   </head>
   <body>
     <header>
-        <nav>
-            <a href="./index.html">WEBSTUDIO</a>
-            <ul>
-                <li>
-                    <a href="./index.html">Studio</a>
-                </li>
-                <li>
-                    <a href="./index.html">Portfolio</a>
-                </li>
-                <li>
-                    <a href="./index.html">Contacts</a>
-                </li>
-            </ul>
-            <address>
-                <ul>
-                    <li>
-                        <a href="/index.html">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a href="/index.html">+11 (000) 111-11-11</a>
-                    </li>
-                </ul>
-            </address>
-        </nav>
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li>
+            <a href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a href="./index.html">Portfolio</a>
+          </li>
+          <li>
+            <a href="./index.html">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
@@ -39,6 +39,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2 hidden>WebStudio</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -75,32 +76,32 @@
         <ul>
           <li>
             <img
-              src="/images/mark-guerrero.jpg"
+              src="./images/mark-guerrero.jpg"
               alt="Mark Guerrero"
-              width="400"
+              width="264"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/tom-ford.jpg" alt="Tom Ford" width="400" />
+            <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="/images/camila-garcia.jpg"
+              src="./images/camila-garcia.jpg"
               alt="Camila Garcia"
-              width="400"
+              width="264"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="/images/daniel-wilson.jpg"
+              src="./images/daniel-wilson.jpg"
               alt="Daniel Wilson"
-              width="400"
+              width="264"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
@@ -109,7 +110,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
